dovecot/dovecot-pigeonhole/tests/extensions/include/errors/included/circular-three.sieve
require "include";

keep;

include "circular-three-2.sieve";


